[tool.poetry]
name = "search_dash"
version = "0.1.0"
description = ""
authors = ["stbeck-ucsf <stephen.beck@ucsf.edu>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dash = "^2.0.0"
jupyter-dash = "^0.4.0"
ipykernel = "^6.6.0"
plotly = "^5.5.0"
pandas = "^1.3.5"
mcr_toolkit = {path = "../mcr_toolkit", develop = true}
dash-bootstrap-components = "^1.0.2"
dash-extensions = "^0.0.67"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
